# shockwave-plus

./: Cargo.toml  README.md
frontend/: Cargo.toml
frontend/src/: constraint_system.rs  lib.rs  test_utils.rs  wasm.rs
shockwave_plus/: Cargo.toml
shockwave_plus/benches/: prove.rs
shockwave_plus/src/: lib.rs  timer.rs  transcript.rs  utils.rs
shockwave_plus/src/polynomial/: blinder_poly.rs  eq_poly.rs  ml_poly.rs  mod.rs  sparse_ml_poly.rs
shockwave_plus/src/poseidon/: mod.rs  sponge.rs
shockwave_plus/src/poseidon/constants/: mod.rs  secp256k1.rs  secp256k1_w3.rs  secp256k1_w9.rs
shockwave_plus/src/r1cs/: mod.rs  r1cs.rs
shockwave_plus/src/sumcheck/: mod.rs  sc_phase_1.rs  sc_phase_2.rs  sumcheck.rs  unipoly.rs
shockwave_plus/src/tensor_pcs/: hasher.rs  mod.rs  tensor_code.rs  tensor_rs_pcs.rs  tree.rs  utils.rs
shockwave_plus/src/tensor_pcs/hasher/: blake2b_hasher.rs  keccak_hasher.rs  mod.rs  poseidon_hasher.rs
shockwave_plus/src/tensor_pcs/rs_config/: ecfft.rs
shockwave_plus/src/tensor_pcs/rs_config/good_curves/: mod.rs  pallas.rs  secp256k1.rs
tensor_pcs/: Cargo.toml
tensor_pcs/benches/: prove.rs
tensor_pcs/src/: fft.rs  lib.rs  tensor_code.rs  tensor_pcs.rs  tensor_rs_pcs.rs  transcript.rs  tree.rs  utils.rs
tensor_pcs/src/polynomial/: eq_poly.rs  mod.rs  sparse_ml_poly.rs
tensor_pcs/src/rs_config/: ecfft.rs  mod.rs  naive.rs  smooth.rs
tensor_pcs/src/rs_config/good_curves/: secp256k1.rs
