[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shockwave-plus = { path = "../shockwave_plus" }
bincode = "1.3.3"
wasm-bindgen = "0.2.87"
console_error_panic_hook = "0.1.7"
ark-std = "0.4.0"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[features]
print-trace = ["ark-std/print-trace"]
