[package]
name = "shockwave-plus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-std = "0.4.0"
bincode = "1.3.3"
halo2curves = { version = "0.1.0", features = ["derive_serde"] }
rand = "0.8.5"
getrandom = { version = "0.2.8", features = ["js"] }
tensor-pcs = { path = "../tensor_pcs" }
serde = { version = "1.0.152", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "shockwave-plus"
path = "benches/prove.rs"
harness = false

[features]
print-trace = ["ark-std/print-trace"]
