[package]
name = "shockwave-plus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-std = "0.4.0"
rand = "0.8.5"
getrandom = { version = "0.2.8", features = ["js"] }
merlin = "3.0.0"
ecfft = { git = "https://github.com/DanTehrani/ecfft", branch = "main" }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
ark-ff = { version = "0.4.2", features = ["std", "rayon", "asm"] }
num-bigint = "0.4.4"
ark-secp256k1 = "0.4.0"
ark-serialize = "0.4.2"
rayon = { version = "1.7.0", optional = true }

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "shockwave-plus"
path = "benches/prove.rs"
harness = false

[features]
default = ["parallel"]
parallel = ["rayon"]
find-curve = []
